--- a/app/src/main/res/layout/item_conteiner_filter.xml
+++ b/app/src/main/res/layout/item_conteiner_filter.xml
@@ -15,6 +15,7 @@
         android:src="@drawable/image_place_holder"
         app:riv_corner_radius="@dimen/_8sdp"/>
     <TextView
+        android:id="@+id/textFilterName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_4sdp"
