--- a/app/src/main/res/layout/activity_edit_image.xml
+++ b/app/src/main/res/layout/activity_edit_image.xml
@@ -78,4 +78,14 @@
         tools:listitem="@layout/item_conteiner_filter"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+    <ProgressBar
+        android:id="@+id/imageFiltersProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/filterRecyclerView"
+        app:layout_constraintEnd_toEndOf="@id/filterRecyclerView"
+        app:layout_constraintStart_toStartOf="@id/filterRecyclerView"
+        app:layout_constraintTop_toTopOf="@id/filterRecyclerView"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
